# rew

./: meson.build
subprojects/: re.wrap
